import "game_event_context.proto";

message Context_DeckSelect {
	extend GameEventContext {
		optional Context_DeckSelect ext = 1002;
	}
	optional string deck_hash = 1;
}
